<resources>
    <string name="app_name">Lab4</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="epidemiological_risk_analysis">Epidemiological risk analysis</string>
    <string name="contacts_amount">Contacts (amount):</string>
    <string name="potential_diseases">Potential diseases:</string>
    <string name="average_contact_duration">Average contact duration:</string>
    <string name="risk_level">Risk level:</string>
    <string name="total_risk">Total risk:</string>
    <string name="is_contagious">Is contagious:</string>
    <string name="disease">Disease:</string>
    <string name="name">Name:</string>
    <string name="contacts">Contacts</string>
    <string name="room_name">Room name:</string>
    <string name="minimal_distance">Minimal distance:</string>
    <string name="contact_start_time">Contact start time:</string>
    <string name="contact_end_time">Contact end time:</string>
    <string name="none">None</string>
    <string name="profile">Profile</string>
    <string name="email">Email:</string>
    <string name="registration_date">Registration date:</string>
    <string name="role">Role:</string>
    <string name="hospital_name">Hospital name:</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="unknown">Unknown</string>
    <string name="edit_profile">Edit profile</string>
    <string name="delete_account">Delete account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="surname">Surname</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="enter_email">Enter email</string>
    <string name="change_role">Change role</string>
    <string name="login">Login</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter password</string>
    <string name="backup">Backup</string>
    <string name="backup_directory">Backup directory:</string>
    <string name="choose_backup_directory">Choose backup directory</string>
    <string name="restore">Restore</string>
    <string name="select_bak_file">Select .bak file</string>
    <string name="choose_bak_file">Choose .bak file</string>
    <string name="enter_backup_directory">Enter backup directory</string>
    <string name="enter_bak_file_path">Enter .bak file path</string>
    <string name="restore_file_path">Restore file path:</string>
    <string name="register">Register</string>
    <string name="write_backup_directory">Write backup directory</string>
    <string name="write_restore_file_path">Write restore file path</string>
    <string name="access_token_not_found">Access token not found</string>
    <string name="backup_made_successfully">Backup made successfully!</string>
    <string name="response_failed">Response failed</string>
    <string name="network_error">Network error</string>
    <string name="restore_successful">Restore successful!</string>
    <string name="restore_failed">Restore failed</string>
    <string name="select_user_email">---Select user email---</string>
    <string name="select_role">---Select role---</string>
    <string name="please_select_both_email_and_role">Please select both email and role</string>
    <string name="role_changed_successfully">Role changed successfully!</string>
    <string name="user_id_is_missing">User ID is missing</string>
    <string name="user_updated_successfully">User updated successfully!</string>
    <string name="update_failed">Update failed</string>
    <string name="user_deleted_successfully">User deleted successfully!</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="you_logged_in_successfully">You logged in successfully!</string>
    <string name="failed_to_load_hospitals">Failed to load hospitals</string>
    <string name="select_hospital">---Select hospital---</string>
    <string name="logout">Logout</string>
</resources>