<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/email"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/profileRegistrationDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/registration_date"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/profileRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/role"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/profileHospitalName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/hospital_name"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/profileDisease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/disease"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/profileIsContagious"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/is_contagious"
        android:textSize="17sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:textColor="@android:color/white"
        android:text="@string/edit_profile"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:textColor="@android:color/white"
        android:text="@string/delete_account"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:textColor="@android:color/white"
        android:text="@string/logout"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:layout_gravity="center"/>

</LinearLayout>