<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/editNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:inputType="text"
        android:background="@drawable/shape_input"
        android:padding="12dp" />

    <TextView
        android:id="@+id/editSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/surname"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/editSurnameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/enter_surname"
        android:textColor="#000000"
        android:inputType="text"
        android:background="@drawable/shape_input"
        android:padding="12dp" />

    <TextView
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/editEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/enter_email"
        android:textColor="#000000"
        android:inputType="textEmailAddress"
        android:background="@drawable/shape_input"
        android:padding="12dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:textColor="@android:color/white"
        android:text="@string/edit_profile"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

</LinearLayout>