<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/registerContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/registerNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_name"
            android:textColor="#000000"
            android:inputType="text"
            android:background="@drawable/shape_input"
            android:padding="12dp" />

        <TextView
            android:id="@+id/registerSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/surname"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/registerSurnameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_surname"
            android:textColor="#000000"
            android:inputType="text"
            android:background="@drawable/shape_input"
            android:padding="12dp" />

        <TextView
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/registerEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_email"
            android:textColor="#000000"
            android:inputType="textEmailAddress"
            android:background="@drawable/shape_input"
            android:padding="12dp" />

        <TextView
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/registerPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_password"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:background="@drawable/shape_input"
            android:padding="12dp" />

        <TextView
            android:id="@+id/registerHospitalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hospital_name"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/registerHospitalNameSelect"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:textColor="@android:color/white"
            android:text="@string/register"
            android:textSize="17sp"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</FrameLayout>