<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lab4.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_backup"
        android:name="com.example.lab4.ui.backup.BackupFragment"
        android:label="Backup"
        tools:layout="@layout/fragment_backup" />
    <fragment
        android:id="@+id/navigation_editProfile"
        android:name="com.example.lab4.ui.editProfile.EditProfileFragment"
        android:label="@string/edit_profile" />
    <fragment
        android:id="@+id/navigation_changeRole"
        android:name="com.example.lab4.ui.changeRole.ChangeRoleFragment"
        android:label="@string/change_role"
        tools:layout="@layout/fragment_change_role" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.lab4.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>