<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/login_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/backupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:text="@string/backup"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/backupDirectory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/backup_directory"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/backupInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_backup_directory"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:inputType="text"
            android:background="@drawable/shape_input"
            android:padding="12dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backupButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:textColor="@android:color/white"
            android:text="@string/backup"
            android:textSize="17sp"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/restoreTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/restore"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/restorePath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/restore_file_path"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/restoreInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_bak_file_path"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:inputType="text"
            android:background="@drawable/shape_input"
            android:padding="12dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/restoreButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:textColor="@android:color/white"
            android:text="@string/restore"
            android:textSize="17sp"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</FrameLayout>