<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/login_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/loginEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_email"
            android:textColor="#000000"
            android:inputType="textEmailAddress"
            android:background="@drawable/shape_input"
            android:padding="12dp" />

        <TextView
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/loginPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_password"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:background="@drawable/shape_input"
            android:padding="12dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:textColor="@android:color/white"
            android:text="@string/login"
            android:textSize="17sp"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? Register"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />

    </LinearLayout>

</FrameLayout>