<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/changeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/change_role"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/changeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textSize="17sp" />

    <Spinner
        android:id="@+id/changeEmailSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/changeRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/role"
        android:textSize="17sp" />

    <Spinner
        android:id="@+id/changeRoleSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:textColor="@android:color/white"
        android:text="@string/change_role"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

</LinearLayout>